<resources>
    <string name="app_name">PlayList</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="txt_night_theme">Темная тема</string>
    <string name="txt_share_app">Поделиться приложением</string>
    <string name="txt_mode">Написать в поддержку</string>
    <string name="txt_user_agreement">Пользовательское соглашение</string>
    <string name="serch_activity">Поиск</string>
    <string name="hint_search">Поиск</string>
    <string name="subject_message">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="link_message">"https://practicum.yandex.ru/android-developer/"</string>
    <string name="email_message">"Godmordor@gmail.com"</string>
    <string name="dev_message">"Спасибо разработчикам и разработчицам за крутое приложение"</string>
    <string name="uri_message">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="search_empty">Ничего не нашлось</string>
    <string name="error_ithernet">Проблемы со связью</string>
    <string name="ithernet_no_download">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="searchHistory">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="country_str">Страна</string>
    <string name="genre_str">Жанр</string>
    <string name="year_str">Год</string>
    <string name="album_txt">Альбом</string>
    <string name="duration_str">Длительность</string>
    <string name="mediateka_activity">Медиатека</string>
    <string name="mediateka_empty">Ваша медиатека пуста</string>
    <string name="playList_empty">Вы не создали\nни одного плейлиста</string>
    <string name="new_playList">Новый плейлист</string>
    <string name="favourites_track">Избранные треки</string>
    <string name="play_list">Плейлисты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="create_play_list">Создать</string>
    <string name="name_album">Название*</string>
    <string name="desc_album">Описание</string>
    <string name="close_create_playlist">Завершить создание плейлиста?</string>
    <string name="save_msg">Все несохраненные данные будут потеряны</string>
    <string name="complete">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="create_playlist">Плейлист %1$s создан</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="empty_playlist">Вы не создали ни одного плейлиста</string>
    <string name="tracks">треков</string>
    <string name="track">трек</string>
    <string name="track_a">трека</string>
    <string name="track_is_in_playlist">"Трек уже добавлен в плейлист "</string>
    <string name="add_to_the_playlist">"Добавлено в плейлист "</string>
    <string name="minut">минут</string>
    <string name="minuta">минута\n</string>
    <string name="minuti">минуты</string>
    <string name="playlist_no_track">В этом плейлисте нет треков</string>
    <string name="share">Поделиться\n</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="text_plain">text/plain</string>
    <string name="ss_time">ss</string>
    <string name="delete_track">Удалить трек</string>
    <string name="do_you_want_to_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="do_you_wont_to_delete_playlist">Хотите удалить плейлист?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="playlist_not_have_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="null_value">null</string>
    <string name="edit_text">Редакировать</string>
    <string name="save">Сохранить\n</string>
</resources>