<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_4dp"
        android:layout_marginTop="@dimen/size_4dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="@dimen/size_4dp">

        <TextView
            android:id="@+id/txt_name_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="@dimen/size_12dp"
            android:paddingTop="10dp"
            android:paddingEnd="62dp"
            android:paddingBottom="@dimen/size_12dp"
            android:text="@string/playlist_maker"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_main"
            tools:ignore="RtlSymmetry" />

    </FrameLayout>


    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/search"
        android:textColor="@color/fiol"
        android:textSize="@dimen/size_text_main"
        app:cornerRadius="@dimen/size_16dp"
        app:icon="@drawable/ic_search_24"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/fiol" />

    <Button
        android:id="@+id/btn_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/mediateka"
        android:textColor="@color/fiol"
        android:textSize="@dimen/size_text_main"
        app:cornerRadius="@dimen/size_16dp"
        app:icon="@drawable/ic_media_24"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/fiol" />

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/setting"
        android:textColor="@color/fiol"
        android:textSize="@dimen/size_text_main"
        app:cornerRadius="@dimen/size_16dp"
        app:icon="@drawable/ic_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/fiol" />

</LinearLayout>