<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.PlayList"
    tools:context=".ui.playActivity.PlayActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryVariant"
        >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />


    <ImageView
        android:id="@+id/back_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_4dp"
        android:layout_marginTop="@dimen/size_4dp"
        android:padding="@dimen/size_12dp"
        android:src="@drawable/ic_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/cover_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_search"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/back_img"
        app:layout_constraintBottom_toTopOf="@+id/name_track_txt"
        tools:ignore="ContentDescription"
        tools:src="@drawable/img_track_default" />

    <TextView
        android:id="@+id/name_track_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="400"
        android:maxLines="1"
        android:ellipsize="marquee"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/cover_img"
        app:layout_constraintBottom_toTopOf="@+id/author_txt"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/author_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="400"
        android:maxLines="1"
        android:ellipsize="marquee"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/name_track_txt"
        app:layout_constraintBottom_toTopOf="@+id/play_img"
        tools:text="The Beatles" />

    <ImageView
        android:id="@+id/play_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/play_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/author_txt"
        app:layout_constraintBottom_toTopOf="@+id/play_second_txt"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/add_in_playList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:scaleType="centerCrop"
        android:src="@drawable/add_button"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/author_txt"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/like_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:scaleType="centerCrop"
        android:src="@drawable/like_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/author_txt"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/play_second_txt"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_4dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/play_img"
        app:layout_constraintBottom_toTopOf="@+id/duration_info_txt"
        tools:text="0:30" />

    <TextView
        android:id="@+id/duration_info_txt"
        style="@style/textPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/duration_str"
        app:layout_constraintBottom_toTopOf="@+id/album_info_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_second_txt"/>

    <TextView
        android:id="@+id/time_txt"
        style="@style/changeTextPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBaseline_toBaselineOf="@id/duration_info_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_second_txt"
        tools:text="5:35" />

    <TextView
        android:id="@+id/album_info_txt"
        style="@style/textPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_txt"
        app:layout_constraintBottom_toTopOf="@+id/year_info_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration_info_txt" />

    <TextView
        android:id="@+id/album_name_txt"
        style="@style/changeTextPlay"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:maxLines="1"
        android:ellipsize="marquee"
        app:layout_constraintBaseline_toBaselineOf="@id/album_info_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_txt"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/year_info_txt"
        style="@style/textPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_str"
        app:layout_constraintBottom_toTopOf="@+id/genre_info_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album_info_txt" />

    <TextView
        android:id="@+id/year_txt"
        style="@style/changeTextPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/year_info_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album_name_txt"
        tools:text="1965" />

    <TextView
        android:id="@+id/genre_info_txt"
        style="@style/textPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_str"
        app:layout_constraintBottom_toTopOf="@+id/country_info_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year_info_txt" />

    <TextView
        android:id="@+id/genre_txt"
        style="@style/changeTextPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/genre_info_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year_txt"
        tools:text="Rock" />

    <TextView
        android:id="@+id/country_info_txt"
        style="@style/textPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/country_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre_info_txt" />

    <TextView
        android:id="@+id/country_txt"
        style="@style/changeTextPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/country_info_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre_txt"
        tools:text="Россия" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/playlist_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/playlist_bottom_sheet_background"
        android:visibility="gone"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="visible"
        android:orientation="vertical">

        <View
            android:layout_width="50dp"
            android:layout_height="@dimen/size_4dp"
            android:layout_marginTop="@dimen/size_8dp"
            android:background="@drawable/handle_bottom_sheet_background"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_12dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:paddingVertical="@dimen/size_16dp"
            android:text="@string/add_in_playlist"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="500"
            android:textSize="@dimen/size_19sp"
            />
        <Button
            android:id="@+id/btn_new_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:backgroundTint="?attr/colorOnSecondary"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/new_playlist"
            android:textColor="?attr/colorPrimaryVariant"
            android:textFontWeight="500"
            android:textSize="@dimen/size_14sp"
            android:layout_gravity="center_horizontal"
            />

        <ScrollView
            android:id="@+id/scroll_view_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_new_playlist"
            tools:visibility="gone"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_play_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="180dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </ScrollView>

        <LinearLayout
            android:id="@+id/no_playlists"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <FrameLayout
                android:layout_width="@dimen/size_120dp"
                android:layout_height="@dimen/size_120dp"
                android:layout_marginTop="102dp">



            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:text="@string/empty_playlist"
                android:textColor="?attr/colorOnBackground"
                android:textFontWeight="400"
                android:textSize="@dimen/size_19dp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view_player"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>